# hsstrip

./: LICENSE  README.md  hsstrip.cabal  stack.yaml
src/: Main.hs
