cabal-version:       3.0
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                hsstrip
version:             0.0.1

author:              Stefan Klinger
maintainer:          haskell@stefan-klinger.de

category:            experimantal
synopsis:            Strips comments and empty lines from Haskell source code.

license-file:        LICENSE

extra-source-files:  README.md



common shared-properties
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ScopedTypeVariables
                     , LambdaCase
                    -- , OverloadedStrings

  mixins:              base hiding ( Control.Concurrent, Control.Exception
                                   , Control.Concurrent.STM )
                       -- reather use UnliftIO, see [1]

common devel-properties
  import:              shared-properties
  ghc-options:         -Wall
                       -Wwarn=deprecations
                       -Wno-orphans
                       -Wwarn=name-shadowing
                       -dynamic

common production-properties
  import:              shared-properties
  ghc-options:         -Wall
                       -Werror
                       -Wwarn=missing-local-signatures
                       -Wwarn=missing-export-lists
                       -Wwarn=unused-top-binds
                       -Wwarn=deprecations
                       -Werror=unused-imports
                       -Wno-orphans
                       -Wwarn=name-shadowing
                       -dynamic

common chosen-properties
  import: production-properties



executable hsstrip
  import:              chosen-properties

  hs-source-dirs:      src
  main-is:             Main.hs

  --other-modules:

  build-depends:       base
                    -- , text
                    -- , unliftio
                    -- , attoparsec
                    -- , bytestring
                    -- , containers
                    -- , haskeline
                    -- , parsec
                    -- , robust-int
                    -- , shuntingYard


-- Notes
-- [1]: https://hackage.haskell.org/package/unliftio-0.2.25.0#readme
